# cabin-adax

./: .gitignore  ARBEID.md  CHANGES.md  LICENSE  README.md  data_service.py  main.py  migrate_rooms.py  models.py  pyproject.toml
app/: data_service.py  main.py
app/config/: load_environment.py
app/data/: rooms.json
app/models/: __init__.py  db_session.py  heater_model.py  room_model.py
app/routers/: admin.py  display_panel.py  heaters_dashboard.py  home.py
app/services/: data_service.py
app/static/css/: header-blue.css  site.css
app/templates/admin/: edit_heater.pt  edit_room.pt  heaters.pt  rooms.pt
app/templates/heaters_dashboard/: heaters_dashboard.pt
app/templates/home/: about.pt
app/templates/shared/: _layout.pt
app/viewmodels/home/: about_view_model.py
app/viewmodels/shared/: view_model_base.py
config_files/: logging.yaml
env_files/: env_file_should_be_placed_here.txt  env_template.txt
